css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*, *::before, *::after{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
html{
    font-size: 62.5%;
    font-family: 'Noto Sans', sans-serif;
    scroll-behavior: smooth;
}
h1{
    font-size: 5.6rem;
    
}
h2{
    font-size: 3.5rem;
}
h3{
    font-size: 1.8rem;
}
p{
    font-size: 1.6rem;
}
nav{
    position: absolute;
    z-index: 4;
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 99vw;
    overflow: hidden;
    margin-top: 3.8rem;
}
nav ul{
    list-style-type: none;
    display: flex;
    gap: 4.5rem;
}
nav li a{
    color: #fff;
    font-size: 1.6rem;
    font-weight: 600;
    text-decoration: none;
    text-decoration-color: #E7BE7E;
    transition: text-decoration ease-in-out 0.5s;
}
nav li a:hover{
    text-decoration: underline 2px solid #E7BE7E;
    text-underline-offset: 1rem;
}
nav .btn{
    padding: 1.3rem 3.5rem;
    background-color: #E7BE7E;
    font-size: 1.6rem;
    font-weight: 500;
    text-decoration: none;
    color: black;
}
nav .btn:hover{
    background-color: #eeb75f;
}
nav i{
    font-size: 1.6rem;
    color: white;
}
nav .fa-bars{
    display: none ;
}
main{
    height: 100vh;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #435061;
    color: #fff;
    overflow: hidden;
    margin: 0;
}
main::before{
    content: "";
    background-image: url(../images/dsc9188-1.jpg);
    background-size: cover;
    position: absolute;
    width: 100vw;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 0.3;
}
main h1, main h3{
    position: relative;
    color: #fff;  
    text-align: center;
}


#about-it{
    display: flex;
    max-width: 108rem;
    margin: 7.2rem auto;
    gap: 5%;
}
#about-it article, #about-it aside{
    width: 47.5%;
}
#about-it aside{
    display: flex;
    flex-direction: column;
    gap: 2.4rem;
}
#about-it .pair{
    display: flex;
    gap: 2%;
}
#about-it .pair img{
    width: 49%;
}
#about-it article{
    display: grid;
    place-content: center;
}
#about-it article p{
    margin-bottom: 2rem;
    color: #737373;
}
#about-it article h2{
    margin-bottom: 2rem;
}

#school{
    background-color: #E5DFD7;
    color: #3D3D3D;
}
#school article{
    max-width: 108rem;
    padding: 6rem 0;
    margin: 0 auto;

}
.mb-2{
    margin-bottom: 4rem;
}
.accordion{
    display: flex;
    flex-direction: column;
}

#school ul{
    list-style-type: none;
    display: flex;
    flex-direction: column;
}
#school li{
    border-bottom: 2px solid #CFCFCF;
}
#school li.open{
    margin-bottom: 2rem;
}
#school li:last-child{
    margin-bottom: 0rem;
}
#school li:last-child{
    border-bottom: none;
}
.accordion-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2rem;
}
.accordion-content{
    padding: 2rem;
}
.accordion-content p{
    margin-bottom: 2rem;
}
.accordion-item{
    transition: ease-out 0.3s;
}
.accordion-item.open {
    background-color: #435061;
    color: #fff;
}
.accordion-item .accordion-content{
   display: none; 
}
.accordion-item.open .accordion-content{
    display: block;
}
.accordion-item.open .accordion-header{
    border-bottom: 2px solid #E7BE7E;
}
#school .accordion-item .btn{
    text-align: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
#school .accordion-item.open .btn{
    color: #3E3E3E;
    background-color: #E7BE7E;
    border: 2px solid #fff;

    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
#school .accordion-item .btn:hover{
    background-color: rgb(235, 233, 233);
}
#school .accordion-item.open .btn:hover{
    background-color: #e9ca99;
}
#school .btn{
    padding: 1.3rem 3.8rem;
    background-color: #fff;
    border: .2rem solid #3E3E3E;
    font-weight: 600;
    font-size: 1.6rem;
    cursor: pointer;
}



#discover{
    background-color: #435061;
    color: #fff;
}
#discover article{
    max-width: 108rem;
    padding: 8.6rem 0;
    margin: 0 auto;
}
.center-text{
    text-align: center;
}
#discover h2{
    text-align: center;
    margin-bottom: 8.2rem;
}
.discover-flex{
    display: flex;
    gap: 5rem;
}
.discover-flex p {
    margin-bottom: 1.6rem
}
.discover-flex div{
    width: 50%;
}
#application{
    background-color: #E7BE7E;
    color: #435061;
    width: 100vw;
}
#application article{
    max-width: 108rem;
    padding: 8.6rem 0;
    margin: 0 auto;
}
#application{
    text-align: center;
}
#application h2{
    margin-bottom: 2.8rem;
}
#application p{
    margin-bottom: 6.4rem;
}
#application form{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 4.8rem;
}
form input, form textarea{
    padding: 1.3rem 1.6rem 1.3rem 1.6rem;
    border: .2rem solid black;
}
form input:focus{
    outline: none;
}
form input::placeholder{
    color: black;
    font-weight: 600;
}
form #application-text{
    grid-column: span 2;
    height: 235px;
}

form textarea{
    font-family: 'Noto Sans', sans-serif;
    font-size: 1.6rem;
    color: black;
}
form textarea:focus{
    outline: none;
}
form textarea::placeholder{
    color: black;
    font-weight: 500;
}
form button{
    padding: 1.3rem 3.5rem;
    background-color: #3C3C3C;
    font-size: 1.6rem;
    font-weight: 500;
    text-decoration: none;
    border: none;
    color: #fff;
    grid-column: span 2;
    font-weight: 500;
}

footer{
    background-color: #E5DFD7;
}
footer .container{
    max-width: 108rem;
    padding: 6rem 0 4rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
footer ul{
    display: flex;
    list-style-type: none;
    gap: 4.4rem;
}
footer h2{
    margin-bottom: 2rem;
}
footer p{
    line-height: 2.2rem;
}

@media (max-width: 400px) {
    #about-it{
        gap: 1rem;
    }
    #about-it aside{
        padding: 2rem;
    }
    #about-it .pair img{
        width: 47%;
        overflow: hidden;
    }

    #discover .discover-flex{
        flex-direction: column;
    }
    #discover .discover-flex div{
        width: 100%;
    }
#discover .discover-flex strong{
        text-align: center;
    }
    #school .btn{
        padding: 1rem 2rem;
    }
    .accordion-header{
        gap: 5%;
    }
}
@media (max-width: 900px) {
    nav .fa-bars{
        display: block;
        
    }
    nav ul{
        display: none;
    }
    nav .btn{
        display: none;
    }
    nav img{
        height: 3rem;
    }
    nav{
        justify-content: space-between;
        padding: 0 10%;
    }
    #application form{
        width: 100%;
        grid-template-columns: 49% 49%;
        gap: 2%;
    }
    footer .container{
        flex-direction: column;
    }
    footer .container div{
        margin-bottom: 3rem;
    }
}
@media (max-width: 1080px) {
    section{
        padding: 2rem;
    }
}
@media (max-width: 800px) {
    #about-it{
        flex-direction: column;
        gap: 2rem;
    }
    #about-it article, #about-it aside{
        width: 100%;
    }
}
@media (max-width: 375px) {
    main h1{
        font-size: 4rem;
    }
    main h3{
        font-size: 1.6em;
        font-weight: 400;
    }
}

